# onsitereview

./: .env.example  .gitignore  CTSS_PROJECT_SPECIFICATION.md  CTSS_Workflow_BEFORE.html  CTSS_Workflow_Diagrams.html  Install-Service.ps1  README.md  configure_credentials.ps1  manage_service.ps1  prototype_samples.json  pyproject.toml  requirements.txt  scoring_rubrics.json  setup_service.ps1
.claude/: settings.local.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md
.planning/phases/02-rules-engine/: 02-01-PLAN.md
.planning/phases/03-llm-evaluator/: 03-01-PLAN.md
.planning/phases/04-scoring-engine/: 04-01-PLAN.md
.planning/phases/05-streamlit-ui/: 05-01-PLAN.md
.planning/phases/06-reporting/: 06-01-PLAN.md
docs/: TECHFEST_2026_PRESENTATION.md  servicenow_export_guide.md  workflow_charts.html
src/onsitereview/: __init__.py
src/onsitereview/config/: __init__.py  settings.py
src/onsitereview/llm/: __init__.py  batch.py  client.py  evaluator.py  prompts.py  schemas.py
src/onsitereview/models/: __init__.py  evaluation.py
src/onsitereview/parser/: __init__.py  pdf.py  servicenow.py
src/onsitereview/reports/: __init__.py  generator.py
src/onsitereview/rules/: __init__.py  base.py  evaluator.py  opened_for.py
src/onsitereview/scoring/: __init__.py  batch.py  calculator.py  evaluator.py  (+2 more)
src/tqrs/: __init__.py
tests/: __init__.py  conftest.py  test_llm.py  test_models.py  test_parser.py  test_rules.py  test_scoring.py
(+51 files in other folders)
